--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="row">
         <div class="col-6">
           <a
-            href="https://open.spotify.com/album/4Y6a310YpUUMjt9681ee6a?si=UnEnjeauS6aUS-prw44Xig"
+            href="https://open.spotify.com/album/4Y6a310YpUUMjt9681ee6a?si=UnEnjeauS6aUS-prw44Xig&utm_source=ladonnis&utm_medium=site&utm_campaign=bbspotify"
             target="blank"
             ><button class="button">
               <svg
@@ -125,7 +125,7 @@
         </div>
         <div class="col-6">
           <a
-            href="https://music.apple.com/us/album/black-boy-feat-e-r/1517809583?i=1517809589"
+            href="https://music.apple.com/us/album/black-boy-feat-e-r-single/1517809583?utm_source=ladonnis&utm_medium=sitee&utm_campaign=bbapple"
             target="blank"
             ><button class="button">
               <svg
