--- a/index.html
+++ b/index.html
@@ -90,15 +90,14 @@
         </svg>
       </div>
       <div class="row">
-        <iframe
-          width="560"
-          height="315"
-          style="text-align: center"
-          src="https://www.youtube.com/embed/videoseries?list=PLx0sYbCqOb8TBPRdmBHs5Iftvv9TPboYG"
-          frameborder="0"
-          allow="autoplay; encrypted-media"
-          allowfullscreen
-        ></iframe>
+        <div class="video-responsive">
+          <iframe
+            src="https://www.youtube.com/embed/vi7cuAjArRs"
+            frameborder="0"
+            allow="autoplay; encrypted-media"
+            allowfullscreen
+          ></iframe>
+        </div>
       </div>
       <p>Proceeds go to Women on the Rise</p>
       <div class="row">
