--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@
           >
         </div>
         <div class="col-3">
-          <a href="https://ladonnis.com/assets/og.png" target="blank"
+          <a
+            href="https://drive.google.com/uc?export=download&id=1Z9BU2a2wNlc2Kiz9BpHewKPki_Cuadji"
+            target="blank"
             ><button class="button1">+ Save to Camera Roll</button></a
           >
         </div>
