Remove some target blank

--- a/index.html
+++ b/index.html
@@ -233,12 +233,10 @@
       </div>
       <div class="row">
         <div class="col-3">
-          <a href="#more" target="blank"
-            ><button class="button1">+ Read More</button></a
-          >
+          <a href="#more"><button class="button1">+ Read More</button></a>
         </div>
         <div class="col-3">
-          <a href="#annotations" target="blank"
+          <a href="#annotations"
             ><button class="button1">+ Annotations</button></a
           >
         </div>
