--- a/index.html
+++ b/index.html
@@ -66,18 +66,10 @@
       gtag("js", new Date());
       gtag("config", "UA-109415665-1");
     </script>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", function(event) {
-        var bgvideo = document.getElementById("video-bg");
-        bgvideo.muted = true;
-        bgvideo.play();
-      });
-    </script>
   </head>
 
   <body>
-    <video autoplay muted loop class="fullscreen-bg" id="video-bg">
+    <video autoplay muted loop playsinline class="fullscreen-bg" id="video-bg">
       <source src="./assets/bg.mp4" type="video/mp4" />
       <source src="./assets/bg.ogv" type="video/ogg" />
     </video>
