--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </head>
 
   <body>
-    <video autoplay muted loop playsinline class="fullscreen-bg" id="video-bg">
+    <video autoplay muted loop playsinline class="fullscreen-bg">
       <source src="./assets/bg.mp4" type="video/mp4" />
       <source src="./assets/bg.ogv" type="video/ogg" />
     </video>
@@ -99,7 +99,7 @@
           ></iframe>
         </div>
       </div>
-      <p>Proceeds go to Women on the Rise</p>
+      <p class="caption">Proceeds go to Women on the Rise</p>
       <div class="row">
         <div class="col-6">
           <a
