Women on the Rise

--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
           ></iframe>
         </div>
       </div>
-      <p class="caption">Proceeds go to Women on the Rise</p>
+      <p class="caption">
+        <a href="https://www.instagram.com/womenontherisega"
+          >Proceeds go to Women on the Rise</a
+        >
+      </p>
       <div class="row">
         <div class="col-6">
           <a
@@ -240,8 +244,8 @@
           >
         </div>
         <div class="col-3">
-          <a href="https://blacklivesmatter.carrd.co" target="blank"
-            ><button class="button1">+ BlackLivesMatter</button></a
+          <a href="https://www.instagram.com/womenontherisega" target="blank"
+            ><button class="button1">+ Women On The Rise</button></a
           >
         </div>
         <div class="col-3">
