--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@ladonnislove" />
     <meta name="twitter:creator" content="@ladonnislove" />
-    <meta property="og:url" content="https://ladonnis.com/assets/og.png" />
+    <meta property="og:url" content="https://ladonnis.com/assets/og.jpg" />
     <meta property="og:title" content="LaDonnis - Black Boy feat. ER" />
     <meta property="og:description" content="LaDonnis - Black Boy feat. ER" />
-    <meta property="og:image" content="https://ladonnis.com/assets/og.png" />
+    <meta property="og:image" content="https://ladonnis.com/assets/og.jpg" />
     <link href="./assets/main.css" rel="stylesheet" />
     <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png" />
     <link rel="icon" href="./assets/favicon.ico" />
