--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <title>LaDonnis - Black Boy feat. ER</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="LaDonnis - Black Boy feat. ER" />
+    <meta
+      name="description"
+      content="LaDonnis latest record Black Boy feat. ER is now streaming on all platforms, Spotify, Apple Music, Youtube, Google Play Music #womenontherise"
+    />
     <meta name="author" content="ladonnis.com" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@ladonnislove" />
