--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="row">
         <div class="col-6">
           <a
-            href="https://open.spotify.com/album/4Y6a310YpUUMjt9681ee6a?si=UnEnjeauS6aUS-prw44Xig&utm_source=ladonnis&utm_medium=site&utm_campaign=bbspotify"
+            href="https://open.spotify.com/track/2gYkgmgH0fd6nzcJP0pakn?si=NK927br8R2udXD-OJiUL2A"
             target="blank"
             ><button class="button">
               <svg
