Georgia Black United Fund

--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
       </div>
       <p class="caption">
         <a href="https://www.instagram.com/womenontherisega"
-          >Proceeds go to Women on the Rise</a
+          >Women on the Rise</a
         >
+        and
+        <a href="http://www.ga-buf.org">Georgia Black United Fund</a>
       </p>
       <div class="row">
         <div class="col-6">
