--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         </div>
       </div>
       <p class="caption">
+        Proceeds go to
         <a href="https://www.instagram.com/womenontherisega"
           >Women on the Rise</a
         >
