--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
       </div>
       <p class="caption">
-        Proceeds go to
+        Proceeds go to<br />
         <a href="https://www.instagram.com/womenontherisega"
           >Women on the Rise</a
         >
