--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 width="24"
                 version="1.1"
                 viewBox="0 0 168 168"
-                style="padding-right: 10px;"
+                style="padding-right: 10px; vertical-align:-25%;"
               >
                 <path
                   fill="#1ED760"
@@ -144,6 +144,7 @@
                 height="24"
                 width="24"
                 viewBox="36.471 38.394 437.749 439.6"
+                style="padding-right: 10px; vertical-align:-25%;"
               >
                 <linearGradient
                   id="a"
