Fix padding for apple

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 height="24"
                 width="24"
                 viewBox="36.471 38.394 437.749 439.6"
-                style="padding-right: 10px; vertical-align:-25%;"
+                style="vertical-align:-25%;"
               >
                 <linearGradient
                   id="a"
