--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LaDonnis - Black Boy feat. ER</title>
+    <title>LaDonnis - Smackdown. ER</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="LaDonnis latest record Black Boy feat. ER is now streaming on all platforms, Spotify, Apple Music, Youtube, Google Play Music #womenontherise"
+      content="LaDonnis latest record Smackdown. ER is now streaming on all platforms, Spotify, Apple Music, Youtube, Google Play Music #womenontherise"
     />
     <meta name="author" content="ladonnis.com" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@ladonnislove" />
     <meta name="twitter:creator" content="@ladonnislove" />
     <meta property="og:url" content="https://ladonnis.com/assets/og.jpg" />
-    <meta property="og:title" content="LaDonnis - Black Boy feat. ER" />
-    <meta property="og:description" content="LaDonnis - Black Boy feat. ER" />
+    <meta property="og:title" content="LaDonnis - Smackdown. ER" />
+    <meta property="og:description" content="LaDonnis - Smackdown. ER" />
     <meta property="og:image" content="https://ladonnis.com/assets/og.jpg" />
     <link href="./assets/main.css" rel="stylesheet" />
     <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png" />
     <link rel="icon" href="./assets/favicon.ico" />
     <!-- Facebook Pixel Code -->
     <script>
-      !(function(f, b, e, v, n, t, s) {
+      !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
-        n = f.fbq = function() {
+        n = f.fbq = function () {
           n.callMethod
             ? n.callMethod.apply(n, arguments)
             : n.queue.push(arguments);
@@ -50,7 +50,7 @@
       ><img
         height="1"
         width="1"
-        style="display:none"
+        style="display: none"
         src="https://www.facebook.com/tr?id=284085962743191&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
@@ -72,10 +72,6 @@
   </head>
 
   <body>
-    <video autoplay muted loop playsinline class="fullscreen-bg">
-      <source src="./assets/bg.mp4" type="video/mp4" />
-      <source src="./assets/bg.ogv" type="video/ogg" />
-    </video>
     <div class="container">
       <div class="row">
         <svg
@@ -92,10 +88,11 @@
           />
         </svg>
       </div>
+      <div class="row"><div class="smackdown">SMACKDOWN</div></div>
       <div class="row">
         <div class="video-responsive">
           <iframe
-            src="https://www.youtube.com/embed/aQ0KVJ3EaJk"
+            src="https://www.youtube.com/embed/QzGfPNQSvB8"
             frameborder="0"
             allow="autoplay; encrypted-media"
             allowfullscreen
@@ -103,12 +100,7 @@
         </div>
       </div>
       <p class="caption">
-        Proceeds go to<br />
-        <a href="https://www.instagram.com/womenontherisega"
-          >Women on the Rise</a
-        >
-        and
-        <a href="http://www.ga-buf.org">Georgia Black United Fund</a>
+        <a href="#annotations">Words from LaDonnis</a>
       </p>
       <div class="row">
         <div class="col-6">
@@ -122,7 +114,7 @@
                 width="24"
                 version="1.1"
                 viewBox="0 0 168 168"
-                style="padding-right: 10px; vertical-align:-25%;"
+                style="padding-right: 10px; vertical-align: -25%"
               >
                 <path
                   fill="#1ED760"
@@ -144,7 +136,7 @@
                 height="24"
                 width="24"
                 viewBox="36.471 38.394 437.749 439.6"
-                style="vertical-align:-25%;"
+                style="vertical-align: -25%"
               >
                 <linearGradient
                   id="a"
@@ -241,175 +233,27 @@
           >
         </div>
       </div>
-      <div class="row">
-        <div class="col-3">
-          <a href="#more"><button class="button1">+ Read More</button></a>
-        </div>
-        <div class="col-3">
-          <a href="#annotations"
-            ><button class="button1">+ Annotations</button></a
-          >
-        </div>
-        <div class="col-3">
-          <a href="https://www.instagram.com/womenontherisega" target="blank"
-            ><button class="button1">+ Women On The Rise</button></a
-          >
-        </div>
-        <div class="col-3">
-          <a
-            href="https://drive.google.com/uc?export=download&id=1Z9BU2a2wNlc2Kiz9BpHewKPki_Cuadji"
-            target="blank"
-            ><button class="button1">+ Save to Camera Roll</button></a
-          >
-        </div>
-      </div>
-      <div id="more" class="modal-window">
-        <div>
-          <a href="#" title="Close" class="modal-close">Close</a>
-          <p class="left">
-            This song was written as a mantra. A mantra for times like these. A
-            mantra of self love. I want to extend this mantra to all of my
-            brothers and sisters. I am you and you are me.
-          </p>
-          <p class="left">
-            The atrocities I've seen across our nation and specifically in my
-            backyard of Atlanta GA have sparked something deep in all of us.
-          </p>
-          <p class="left">
-            We will be heard. <br />
-            We will be seen. <br />
-            We will not be silenced. <br />
-            Black is Beautiful. <br />
-            Black is worthy. <br />
-            We are Black.
-          </p>
-          <p class="left">
-            I love you thank you.
-          </p>
-          <p class="left">
-            LaDonnis
-          </p>
-        </div>
-      </div>
+      <h2>GET TRUMP OUT</h2>
+      <h3>REQUEST YOUR MAIL-IN BALLOT</h3>
+      <h3>
+        GO TO
+        <a href="https://hacktheballot.com" target="blank">HACKTHEBALLOT.COM</a>
+      </h3>
       <div id="annotations" class="modal-window">
         <div>
           <a href="#" title="Close" class="modal-close">Close</a>
           <p class="left">
-            This piece of art couldn't have been manifested without being
-            thankful to those who came before us - in order of appearance
-            (Youtube Video Titles):
+            I am Black man and a U.S Veteran who has worked with officers and as
+            an officer myself.
           </p>
           <p class="left">
-            1992 Los Angeles Rodney King Riots Raw Unseen Footage <br />
-            PUFF DADDY INTERVIEW BACKSTAGE BEHIND THE SCENES RARE FOOTAGE <br />
-            Nikki Giovanni interviews Muhammad Ali <br />
-            OJ Simpson Bronco chase <br />
-            JAY-Z - Marcy Me <br />
-            Marvin Gaye - Inner City Blues (Make Me Wanna Holler) <br />
-            Moonlight <br />
-            1968 Olympics Black Power Salute <br />
-            Roots KUNTA <br />
-            The Birth Labor, Delivery & Early Postpartum - Childbirth Series
-            <br />
-            Musiq - Love (Official Video) <br />
-            LA Riots, Raw footage of Reginald Denny beatings - April 29, 1992
-            <br />
-            Mike Tyson PunchOut VideoGame 360p <br />
-            Black Is...Black Aint <br />
-            Top 10 Mike Tyson Best Knockouts HD <br />
-            Soul Train Line Dance to Jungle Boogie (1973) <br />
-            Six Days in July -- Coverage of the 1967 Detroit riots <br />
-            Rodney King Beating LAPD 360p <br />
-            Trayvon Martin Shooting Video New Evidence <br />
-            19-Year-Old Black Man Shot After Pointing Finger Gun At Maryland
-            Police <br />
-            Frank Ocean - Nikes <br />
-            CENTRAL PARK FIVE KOREY WISE FULL VIDEO CONFESSION <br />
-            Birth Of A Nation 4291992 (Part 5 of 7) <br />
-            1992 Los Angeles riots - VTS_01 (03).mpg <br />
-            11 Rappers Extreme Stage Dives <br />
-            Deion Sanders - Must Be The Money <br />
-            Eddie Murphy about men and woman <br />
-            Sidney Poitier Wins Best Actor_ 1964 Oscars <br />
-            Heaven On Earth by Virgil Abloh All-Access with Loïc Prigent LOUIS
-            VUITTON <br />
-            Kris Kross - Jump <br />
-            Dennis Rodman FUNNIEST MOMENTS <br />
-            Whitney & Bobby Dancing <br />
-            Blac Youngsta This Is What 2 Million in Cash Looks Like <br />
-            2 Chainz & Amara La Negra Indulge in the Finest Rare Cigars <br />
-            Black Lives Matter Protest in Birmingham, Alabama <br />
-            Goldie wearin some bad gold threads! <br />
-            I'm A Savage! Whatever I Want I Have To Get! <br />
-            Sevran une bagarre éclate entre un policier et un médiateur <br />
-            The Wood Stacy Fight POV HD <br />
-            A walk worth millions Naomi Campbell Runway Compilation <br />
-            The Pharcyde - Passin Me By (Official Music Video) <br />
-            The Fresh Prince Of Bel Air Theme Song (Full) <br />
-            Kanye West And His Mother <br />
-            Pharrell - Frontin (Video) ft. Jay-Z <br />
-            Bill Withers - Aint No Sunshine <br />
-            Ajamu by Stephen Isaac Wilson Random Acts <br />
-            Candyman.1992 <br />
-            Richard Pryor on Love <br />
-            Jumpin Jive - Cab Calloway and the Nicholas Brothers <br />
-            Michael Jackson - Billie Jean [Live 1983] [HD] <br />
-            15-year-old charged in shooting death of 14-year-old <br />
-            Boyz n the Hood <br />
-            New video from aftermath of Castile shooting shows girls bravery
-            <br />
-            South Africa - Police Shootout - 1995 <br />
-            BUCKWHEAT Haunted HOUSE <br />
-            Childish Gambino - This Is America (Official Video) <br />
-            Queen.and.Slim.2019 <br />
-            Erykah Badu _ ANDRE 3000 OTHER SIDE VIDEO <br />
-            Jill Scott - A Long Walk <br />
-            Gridlockd.1997 <br />
-            Rihanna - Bitch Better Have My Money (Explicit) <br />
-            Jean Michel Basquiat Painting Live.mp4 <br />
-            Jay Versace WALKING 1 <br />
-            The Speech that Made Obama President.mp4 <br />
-            MLKs Last Speech.mp4 <br />
-            Kanye West - Closed On Sunday <br />
-            Beyond Scared Straight: Who Took Your Glasses? (Season 7 Flashback)
-            <br />
-            Belly 1998 <br />
-            Juice 1992 <br />
-            The History of Black Protest in Sports (The New Yorker) <br />
-            S.C. police officer charged in shooting death of black man <br />
-            Requiem for a Dream 2000 <br />
-            How Stephon Clark Was Killed by Police in His Backyard NYT - Visual
-            Investigations <br />
-            House.Party 1990 <br />
-            Tales From The Hood Nigglets <br />
-            La Haine <br />
-            Black Face Jazz Singer <br />
-            "Camptown Races" sung by Al Jolson <br />
-            Tupac spitting at reporters <br />
-            Public Enemy - Fight The Power [Full Video Version] <br />
-            Kobe Bryants Top 10 Plays of 2000-2001 NBA Season.mp4 <br />
-            Malcolm X on Front Page Challenge, 1965 CBC Archives CBC.mp4 <br />
-            New Jack City 1991 <br />
-            Poetic Justice 1993 <br />
-            JAY-Z - Roc Boys (And The Winner Is).... <br />
-            Rare Interview with Jean-Michel Basquiat What are you angry about
-            <br />
-            Kendrick Lamar - ELEMENT.. <br />
-            How Prison Taught This Man How to Play Chess <br />
-            Space Jam 1996 <br />
-            Busta Rhymes - Woo Hah!! Got You All In Check <br />
-            Bobby Shmurda - Hot Ngga (Official Music Video) <br />
-            Dashcam video shows New Jersey cops shooting black man Mashable
-            <br />
-            Argenteuil deuxième soirée de violences urbaines (18 mai 2020,
-            Argenteuil, France) [4K] <br />
-            Video appears to show unarmed black jogger shot dead by men who
-            claim to be looking for a burglar <br />
-            ER - Bentons successful surgery <br />
-            The Impact of Colin Kaepernicks National Anthem Kneel NFL Network
-            <br />
-            Deuxième nuit d'émeute à la ZUP d'Argenteuil <br />
+            This song and visual were created to put on spotlight on the cycle
+            of violence against Black lives in America and not to recreate or
+            perpetuate the cycle of violence.
           </p>
+          <p class="left">Let your voice be heard, get out and vote.</p>
+          <p class="left">I love you. Thank you.</p>
+          <p class="left">- LaDonnis</p>
         </div>
       </div>
     </div>
