--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
       gtag("js", new Date());
       gtag("config", "UA-109415665-1");
     </script>
+
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+      #mc_embed_signup {
+        background: #fff;
+        clear: left;
+        font: 14px Helvetica, Arial, sans-serif;
+        width: 340px;
+      }
+    
+      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+    	  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
   </head>
 
   <body>
@@ -88,7 +101,12 @@
           />
         </svg>
       </div>
-      <div class="row"><div class="smackdown">SMACKDOWN</div></div>
+      <div class="row">
+        <div class="smackdown">SMACKDOWN</div>
+      </div>
+      <div class="row">
+        <div class="dropping">DROPPING 10/16</div>
+      </div>
       <div class="row">
         <div class="video-responsive">
           <iframe
@@ -99,10 +117,28 @@
           ></iframe>
         </div>
       </div>
-      <p class="caption">
+      <p class="caption hidden">
         <a href="#annotations">Words from LaDonnis</a>
       </p>
       <div class="row">
+        <div class="sign-up">TEXT ME @ <a href="tel:+1-6786582171">1-678-658-2171</a></div>
+      </div>
+      <div class="row">
+        <div class="sign-up">SIGN UP OT GET NOTIFIED ABOUT NEW MUSIC & GEAR DROPPIN 💧</div>
+      </div>
+      <div class="row">
+        <div id="mc_embed_signup" class="center">
+          <form action="https://ladonnis.us2.list-manage.com/subscribe/post?u=62d1e69cf74dfc236050b97e2&amp;id=6ae812b8d1"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+            novalidate>
+              <input type="submit" value="SIGN ME UP" name="subscribe" id="mc-embedded-subscribe" class="button">
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="no-worries">Don't worry we only send 🔥 and will never spam you or sell your info</div>
+      </div>
+      <div class="row hidden">
         <div class="col-6">
           <a
             href="https://open.spotify.com/track/2gYkgmgH0fd6nzcJP0pakn?si=NK927br8R2udXD-OJiUL2A"
@@ -258,4 +294,7 @@
       </div>
     </div>
   </body>
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+  <script
+    type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
 </html>
