--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@ladonnislove" />
     <meta name="twitter:creator" content="@ladonnislove" />
-    <meta property="og:url" content="https://ladonnis.com/assets/og.jpg" />
+    <meta property="og:url" content="https://ladonnis.com/assets/og.png" />
     <meta property="og:title" content="LaDonnis - Smackdown. ER" />
     <meta property="og:description" content="LaDonnis - Smackdown. ER" />
-    <meta property="og:image" content="https://ladonnis.com/assets/og.jpg" />
+    <meta property="og:image" content="https://ladonnis.com/assets/og.png" />
     <link href="./assets/main.css" rel="stylesheet" />
     <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png" />
     <link rel="icon" href="./assets/favicon.ico" />
@@ -96,6 +96,9 @@
       </div>
       <div class="row">
         <div class="video-responsive">
+          <img src="./assets/smackdown-still.png" alt="Smackdown"/>
+        </div>
+        <div class="video-responsive hidden">
           <iframe
             src="https://www.youtube.com/embed/QzGfPNQSvB8"
             frameborder="0"
