--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="sign-up">TEXT ME @ <a href="tel:+1-6786582171">1-678-658-2171</a></div>
       </div>
       <div class="row">
-        <div class="sign-up">SIGN UP OT GET NOTIFIED ABOUT NEW MUSIC & GEAR DROPPIN 💧</div>
+        <div class="sign-up">SIGN UP TO GET NOTIFIED ABOUT NEW MUSIC & GEAR DROPPIN 💧</div>
       </div>
       <div class="row">
         <div class="mc_embed_signup">
