--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
       <div class="row">
         <div class="mc_embed_signup">
-          <a href="https://ladonnis.us2.list-manage.com/subscribe/post?u=62d1e69cf74dfc236050b97e2&amp;id=6ae812b8d1" target="blank">
+          <a href="https://mailchi.mp/e2fd7e320c66/ladonnis" target="blank">
             <button class="button">SIGN ME UP</button>
           </a>
        </div>
