--- a/index.html
+++ b/index.html
@@ -92,13 +92,7 @@
         <div class="smackdown">SMACKDOWN</div>
       </div>
       <div class="row">
-        <div class="dropping">DROPPING 10/16</div>
-      </div>
-      <div class="row">
         <div class="video-responsive">
-          <img src="./assets/smackdown-still.png" alt="Smackdown"/>
-        </div>
-        <div class="video-responsive hidden">
           <iframe
             src="https://www.youtube.com/embed/QzGfPNQSvB8"
             frameborder="0"
@@ -107,26 +101,26 @@
           ></iframe>
         </div>
       </div>
-      <p class="caption hidden">
+      <p class="caption">
         <a href="#annotations">Words from LaDonnis</a>
       </p>
-      <div class="row">
+      <div class="row hidden">
         <div class="sign-up">TEXT ME @ <a href="tel:+1-6786582171">1-678-658-2171</a></div>
       </div>
-      <div class="row">
+      <div class="row hidden">
         <div class="sign-up">SIGN UP TO GET NOTIFIED ABOUT NEW MUSIC & GEAR DROPPIN 💧</div>
       </div>
-      <div class="row">
+      <div class="row hidden">
         <div class="mc_embed_signup">
           <a href="https://mailchi.mp/e2fd7e320c66/ladonnis" target="blank">
             <button class="button">SIGN ME UP</button>
           </a>
        </div>
       </div>
-      <div class="row hidden">
+      <div class="row">
         <div class="col-6">
           <a
-            href="https://open.spotify.com/track/2gYkgmgH0fd6nzcJP0pakn?si=NK927br8R2udXD-OJiUL2A"
+            href="http://open.spotify.com/album/2T18isPPixCtmoDmcTiTv9"
             target="blank"
             ><button class="button">
               <svg
@@ -147,7 +141,7 @@
         </div>
         <div class="col-6">
           <a
-            href="https://music.apple.com/us/album/black-boy-feat-e-r-single/1517809583?utm_source=ladonnis&utm_medium=sitee&utm_campaign=bbapple"
+            href="http://itunes.apple.com/album/id/1534992999?utm_source=ladonnis&utm_medium=sitee&utm_campaign=bbapple"
             target="blank"
             ><button class="button">
               <svg
